tests/tooling/fixtures/native/recovery/negative/negative_message_parser_nil_bound_post_reassignment_missing_selector.objc3
// Negative fixture: post-reassignment receiver message-send missing selector identifier.
// Expected diagnostic code(s): O3P113.
module NegativeMessageParserNilBoundPostReassignmentMissingSelector;

fn main() {
  let receiver = nil;
  receiver = 1;
  return [receiver : 1];
}
